--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -1,59 +1,72 @@
-.contactWrapper {
+.contactSection{
+
     display: flex;
-    justify-content: center; /* centers the scrollable container */
-    overflow-x: hidden;      /* hides overflow outside the wrapper */
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.contactWrapper {
+
+    display: flex;
+    justify-content: center;
+    overflow-x: hidden;
+
 }
 
 .contactContainer {
     
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: start;
     overflow-x: auto;
+
     gap: 3vh;
     padding: 5vh 5vw;
-    box-sizing: border-box;
+    max-width: 100%;
     
 }
 
 .contactBox{
-
-    background-color: rgb(155, 218, 218);
-    min-width: 10vw;
-    height: 10vw;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
+    width: 10vw;
+    height: 10vw;
+    max-width: 100%;
+    
+    padding: 1.5vh;
+
     font-size: clamp(1.4rem, 4vh, 2.2rem);
 
-    border-left: 0.8vh solid black;
-    border-bottom: 0.8vh solid black;
-    border-top: 0.2vh solid black;
-    border-right: 0.2vh solid black;
+    background-color: rgb(155, 218, 218);
+
+    border-left: 0.8vh solid rgb(42, 82, 82);
+    border-bottom: 0.8vh solid rgb(42, 82, 82);
+    border-top: 0.2vh solid rgb(42, 82, 82);
+    border-right: 0.2vh solid rgb(42, 82, 82);
 
     animation: glowing-shadow-components 4s infinite;
-    padding: 1.5vh;
 
 }
 
 .contactBox:hover{
 
-    background-color: rgb(58, 201, 201);
+    background-color: rgb(44, 147, 147);
 
-    border-left: 1.3vh solid black;
-    border-bottom: 1.3vh solid black;
-    border-top: 0.3vh solid black;
-    border-right: 0.3vh solid black;
+    border-left: 0.8vh solid rgb(19, 72, 72);
+    border-bottom: 0.8vh solid rgb(19, 72, 72);
+    border-top: 0.2vh solid rgb(19, 72, 72);
+    border-right: 0.2vh solid rgb(19, 72, 72);
 
 }
 
 .contactImage{
 
-    max-width: 7vw;
+    max-width: 60%;
 
 }
 
@@ -71,21 +84,15 @@
 
     .contactBox{
 
-        min-width: 20vw;
+        width: 20vw;
         height: 20vw;
-        background-color: rgb(155, 218, 218);
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
 
         font-size: clamp(1rem, 2vh, 2.4rem);
 
-        border-left: 0.8vh solid black;
-        border-bottom: 0.8vh solid black;
-        border-top: 0.2vh solid black;
-        border-right: 0.2vh solid black;
+        border-left: 0.8vh solid rgb(42, 82, 82);
+        border-bottom: 0.8vh solid rgb(42, 82, 82);
+        border-top: 0.2vh solid rgb(42, 82, 82);
+        border-right: 0.2vh solid rgb(42, 82, 82);
 
         animation: glowing-shadow-components-mobile 4s infinite;
 
@@ -93,18 +100,16 @@
 
     .contactBox:hover{
 
-        background-color: rgb(58, 201, 201);
-
-        border-left: 1.1vh solid black;
-        border-bottom: 1.1vh solid black;
-        border-top: 0.3vh solid black;
-        border-right: 0.3vh solid black;
+        border-left: 0.8vh solid rgb(19, 72, 72);
+        border-bottom: 0.8vh solid rgb(19, 72, 72);
+        border-top: 0.2vh solid rgb(19, 72, 72);
+        border-right: 0.2vh solid rgb(19, 72, 72);
 
     }
 
     .contactImage{
 
-        max-width: 15vw;
+        max-width: 70%;
 
     }
 
