--- a/Michelles_Portfolio/src/components/Introduction.css
+++ b/Michelles_Portfolio/src/components/Introduction.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2vh;
-  width: 100%; /* Add this */
+  max-width: 100%;
 
 }
 
@@ -12,6 +12,7 @@
 
   color: white;
   font-size: clamp(1rem, 3vh, 2rem);
+  max-width: 100%;
 
 }
 
@@ -20,11 +21,12 @@
   background-color: rgb(111, 255, 255);
   font-size: 1.8rem;
   padding: 2vh;
+  max-width: 100%;
 
-  border-left: 0.8vh solid black;
-  border-bottom: 0.8vh solid black;
-  border-top: 0.2vh solid black;
-  border-right: 0.2vh solid black;
+  border-left: 0.8vh solid rgb(0, 104, 104);
+  border-bottom: 0.8vh solid rgb(0, 104, 104);
+  border-top: 0.2vh solid rgb(0, 104, 104);
+  border-right: 0.2vh solid rgb(0, 104, 104);
 
   animation: glowing-shadow-subtitle 3s infinite;
 
@@ -35,37 +37,54 @@
   background-color: rgb(82, 93, 255);
   color: white;
 
+  border-left: 0.8vh solid rgb(29, 33, 95);
+  border-bottom: 0.8vh solid rgb(29, 33, 95);
+  border-top: 0.2vh solid rgb(29, 33, 95);
+  border-right: 0.2vh solid rgb(29, 33, 95);
+
 }
 
 .horizontalLine {
+
   height: 0.2vh;
   background-color: #ff00ff;
   width: 100%;
   box-shadow: 0px -2px 0px rgb(0, 179, 255);
+
 }
+
+
+
+
+
 
 /* Mobile adjustments */
 @media (max-width: 1000px) {
 
   .introText{
 
-    color: white;
     font-size: clamp(1rem, 1vh, 2rem);
 
   }
 
   .resumeButton{
 
-    background-color: rgb(111, 255, 255);
     font-size: clamp(1rem, 1vw, 1.8rem);
     padding: 1.5vh;
 
-    border-left: 0.5vh solid black;
-    border-bottom: 0.5vh solid black;
-    border-top: 0.1vh solid black;
-    border-right: 0.1vh solid black;
+    border-left: 0.5vh solid rgb(0, 104, 104);
+    border-bottom: 0.5vh solid rgb(0, 104, 104);
+    border-top: 0.1vh solid rgb(0, 104, 104);
+    border-right: 0.1vh solid rgb(0, 104, 104);
 
-    animation: glowing-shadow-subtitle 3s infinite;
+  }
+
+  .resumeButton:hover{
+
+    border-left: 0.5vh solid rgb(29, 33, 95);
+    border-bottom: 0.5vh solid rgb(29, 33, 95);
+    border-top: 0.1vh solid rgb(29, 33, 95);
+    border-right: 0.1vh solid rgb(29, 33, 95);
 
   }
 
