--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -2,21 +2,32 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    gap: 5vh;
+    max-width: 100%;
+
+}
+
+.projectsInnerContainer{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    max-width: 80%;
 
     background-color: rgb(176, 118, 253);
 
-    border-left: 1vh solid black;
-    border-bottom: 1vh solid black;
-    border-top: 0.5vh solid black;
-    border-right: 0.5vh solid black;
+    border-left: 1vh solid rgb(77, 50, 116);
+    border-bottom: 1vh solid rgb(77, 50, 116);
+    border-top: 0.5vh solid rgb(77, 50, 116);
+    border-right: 0.5vh solid rgb(77, 50, 116);
+
+    box-shadow: 0 0 2vh 1vh rgb(207, 70, 253);
 
     border-radius: 2vw;
-    padding: 5vh;
+    padding: 5vh 5vw;
     gap: 3vh;
-
-    max-width: 80%;
-    justify-self: center;
 
 }
 
@@ -25,21 +36,24 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
     gap: 5vw;
+    max-width: 100%;
 
 }
 
 .cardCarouselButton{
 
     font-size: clamp(1.7rem, 5vh, 3rem);
-    background-color: aqua;
     padding: 1.5vh;
 
-    border-left: 0.5vh solid black;
-    border-bottom: 0.5vh solid black;
-    border-top: 0.1vh solid black;
-    border-right: 0.1vh solid black;
+    background-color: aqua;
+
+    border-left: 0.5vh solid rgb(0, 118, 118);
+    border-bottom: 0.5vh solid rgb(0, 118, 118);
+    border-top: 0.1vh solid rgb(0, 118, 118);
+    border-right: 0.1vh solid rgb(0, 118, 118);
+
+    box-shadow: 0 0 1vh 0.5vh rgb(70, 247, 253);
     
 }
 
@@ -48,51 +62,28 @@
     background-color: rgb(0, 81, 255);
     color: white;
 
+    border-left: 0.5vh solid rgb(0, 30, 94);
+    border-bottom: 0.5vh solid rgb(0, 30, 94);
+    border-top: 0.1vh solid rgb(0, 30, 94);
+    border-right: 0.1vh solid rgb(0, 30, 94);
+
+    box-shadow: 0 0 1vh 0.5vh rgb(0, 81, 255);
+
 }
 
 
 .projectContainer{
 
-    background-color: rgb(184, 225, 254);
-    padding: 3vh;
-    gap:1vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    background-color: rgb(184, 225, 254);
+    padding: 3vh;
+    gap: 1vh;
+    max-width: 100%;
+
     animation: glowing-shadow-components 3s infinite;
-
-}
-
-.projectButton{
-
-    font-size: clamp(1rem, 2.5vh, 1.75rem);
-    padding: 1.5vh;
-
-    background-color: rgb(0, 179, 255);
-
-    border-left: 0.6vh solid black;
-    border-bottom: 0.6vh solid black;
-    border-top: 0vh solid black;
-    border-right: 0vh solid black;
-
-}
-
-.projectButton:hover{
-
-    border-left: 0.9vh solid black;
-    border-bottom: 0.9vh solid black;
-    border-top: 0.2vh solid black;
-    border-right: 0.2vh solid black;
-
-}
-
-.projectMediaContainer{
-
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-    gap: 2vh;
 
 }
 
@@ -101,29 +92,7 @@
 
     font-size: clamp(1.6rem, 4.25vh, 2.75rem);
     color: rgb(3, 0, 47);
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-
-.projectText{
-
-    font-size: clamp(1rem, 2.5vh, 1.5rem);
-    font-size: clamp(1.2rem, 3vh, 2rem);
-    color: rgb(3, 0, 47);
-    
-}
-
-.projectImage {
-
-    max-width: 15vw;
-
-    border-left: 0.6vh solid rgb(153, 0, 255);
-    border-bottom: 0.6vh solid rgb(153, 0, 255);
-    border-top: 0.6vh solid rgb(225, 0, 255);
-    border-right: 0.6vh solid rgb(225, 0, 255);
+    max-width: 100%;
 
 }
 
@@ -135,29 +104,91 @@
 
 }
 
+.projectImage {
+
+    width: 15vw;
+    max-width: 100%;
+
+    border-left: 0.6vh solid rgb(153, 0, 255);
+    border-bottom: 0.6vh solid rgb(153, 0, 255);
+    border-top: 0.6vh solid rgb(225, 0, 255);
+    border-right: 0.6vh solid rgb(225, 0, 255);
+
+}
+
+
+.projectText{
+
+    font-size: clamp(1rem, 2.5vh, 1.5rem);
+    color: rgb(3, 0, 47);
+    max-width: 100%;
+    
+}
+
+
+.projectMediaContainer{
+
+    display: flex;
+    flex-direction: row;
+    overflow-x: auto;
+    gap: 2vh;
+
+    max-width: 100%;
+
+}
+
+
+.projectButton{
+
+    font-size: clamp(1rem, 2.5vh, 1.75rem);
+    padding: 1.5vh;
+
+    background-color: rgb(0, 179, 255);
+
+    border-left: 0.6vh solid rgb(0, 91, 130);
+    border-bottom: 0.6vh solid rgb(0, 91, 130);
+    border-top: 0vh solid rgb(0, 91, 130);
+    border-right: 0vh solid rgb(0, 91, 130);
+
+}
+
+.projectButton:hover{
+
+    border-left: 0.9vh solid rgb(0, 91, 130);
+    border-bottom: 0.9vh solid rgb(0, 91, 130);
+    border-top: 0.2vh solid rgb(0, 91, 130);
+    border-right: 0.2vh solid rgb(0, 91, 130);
+
+}
+
+
 /* Mobile adjustments */
 @media (max-width: 1000px) {
 
-    .projectOuterContainer {
+    .projectOuterContainer{
 
-        border-left: 0.5vh solid black;
-        border-bottom: 0.5vh solid black;
-        border-top: 0.3vh solid black;
-        border-right: 0.3vh solid black;
+        gap: 3vh;
+
+    }
+
+    .projectsInnerContainer {
+
+        padding: 2.5vh 5.5vw;
         
-        padding: 2.5vh;
-        border-radius: 2vw;
+        border-left: 0.6vh solid rgb(77, 50, 116);
+        border-bottom: 0.6vh solid rgb(77, 50, 116);
+        border-top: 0.2vh solid rgb(77, 50, 116);
+        border-right: 0.2vh solid rgb(77, 50, 116);
+        
+        box-shadow: 0 0 1vh 0.5vh rgb(207, 70, 253);
 
     }
     
     .projectContainer{
 
-        background-color: rgb(184, 225, 254);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 1vh;
+        padding: 2vh;
         gap:1vh;
+
         animation: glowing-shadow-components-mobile 3s infinite;
 
     }
@@ -165,72 +196,13 @@
     .projectTitle{
 
         font-size: clamp(1.5rem, 3vh, 2.5rem);
-        color: rgb(3, 0, 47);
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-
-    .projectText{
-
-        font-size: clamp(0.7rem, 1vh, 1.5rem);
-        color: rgb(3, 0, 47);
-        
-    }
-
-    .projectMediaContainer{
-
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        overflow-x: auto;
-        gap: 2vh;
-
-    }
-
-    .projectButton{
-
-        font-size: clamp(0.5rem, 1vh, 1.75rem);
-        padding: 1vh;
-
-        background-color: rgb(0, 179, 255);
-
-        border-left: 0.4vh solid black;
-        border-bottom: 0.4vh solid black;
-        border-top: 0vh solid black;
-        border-right: 0vh solid black;
-
-    }
-
-    .projectButton:hover{
-
-        border-left: 0.6vh solid black;
-        border-bottom: 0.6vh solid black;
-        border-top: 0.1vh solid black;
-        border-right: 0.1vh solid black;
-
-    }
-
-    .cardCarouselButton{
-
-        font-size: clamp(1rem, 3vh, 1.5rem);
-        background-color: aqua;
-        padding: 1vh;
-
-        border-left: 0.5vh solid black;
-        border-bottom: 0.5vh solid black;
-        border-top: 0.1vh solid black;
-        border-right: 0.1vh solid black;
-        
     }
 
     .projectImage {
 
-        max-width: 30vw;
-
+        width: 30vw;
+        
         border-left: 0.5vh solid rgb(153, 0, 255);
         border-bottom: 0.5vh solid rgb(153, 0, 255);
         border-top: 0.5vh solid rgb(225, 0, 255);
@@ -241,9 +213,55 @@
     .horizontalLineProject{
 
         height: 0.15vh;
-        background-color: #000322;
-        width: 80%;
 
+    }
+
+    .projectText{
+
+        font-size: clamp(0.7rem, 1vh, 1.5rem);
+        
+    }
+
+    .projectMediaContainer{
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1vh;
+
+    }
+
+    .projectButton{
+
+        font-size: clamp(0.5rem, 1vh, 1.75rem);
+        padding: 1vh;
+
+        border-left: 0.4vh solid rgb(0, 91, 130);
+        border-bottom: 0.4vh solid rgb(0, 91, 130);
+        border-top: 0vh solid rgb(0, 91, 130);
+        border-right: 0vh solid rgb(0, 91, 130);
+
+    }
+
+    .projectButton:hover{
+
+        border-left: 0.6vh solid rgb(0, 91, 130);
+        border-bottom: 0.6vh solid rgb(0, 91, 130);
+        border-top: 0.2vh solid rgb(0, 91, 130);
+        border-right: 0.2vh solid rgb(0, 91, 130);
+
+    }
+
+    .cardCarouselButton{
+
+        font-size: clamp(1rem, 3vh, 1.5rem);
+        padding: 1vh;
+
+        border-left: 0.5vh solid rgb(0, 118, 118);
+        border-bottom: 0.5vh solid rgb(0, 118, 118);
+        border-top: 0.1vh solid rgb(0, 118, 118);
+        border-right: 0.1vh solid rgb(0, 118, 118);
+        
     }
 
 }
