--- a/Michelles_Portfolio/src/components/Skills.css
+++ b/Michelles_Portfolio/src/components/Skills.css
@@ -1,48 +1,34 @@
 .skillsScreen{
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
     
 }
 
 .skillsContainer{
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    
-    font-size: clamp(1.2rem, 3vh, 2rem);
-    gap: 3vw;
+  display: flex;
+  flex-direction: row;
+  gap: 3vw;
+  max-width: 100%;
 
-    color: white;
+  font-size: clamp(1.2rem, 3vh, 2rem);
+
+  color: white;
 
 }
 
 
-
-/* Mobile adjustments */
 @media (max-width: 1000px) {
     
   .skillsContainer {
-   /* stack vertically on narrow screens */
-    gap: 2vh;                  /* vertical spacing between items */
-    font-size: clamp(1rem, 2vh, 1rem); /* slightly smaller font */
-    width: 100%;
-    margin: 0 auto;
 
-  }
-}
-
-@media (max-width: 600px) {
-    
-  .skillsContainer {
-   flex-direction: column;/* stack vertically on narrow screens */
-    gap: 2vh;                  /* vertical spacing between items */
-    font-size: clamp(0.75rem, 1.5vh, 0.95rem); /* slightly smaller font */
-    width: 100%;
-    max-width: 80vw;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;    
+      
+    font-size: clamp(0.75rem, 1.5vh, 0.95rem);
 
   }
 }
