--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -9,6 +9,7 @@
 .contactWrapper {
 
     display: flex;
+    flex-direction: row;
     justify-content: center;
     overflow-x: hidden;
 
@@ -19,7 +20,7 @@
     display: flex;
     flex-direction: row;
     justify-content: start;
-    overflow-x: auto;
+    flex-wrap: wrap;  
 
     gap: 3vh;
     padding: 5vh 5vw;
