--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -130,7 +130,7 @@
 
     display: flex;
     flex-direction: row;
-    overflow-x: auto;
+    flex-wrap: wrap;  
     gap: 2vh;
 
     max-width: 100%;
