--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -36,12 +36,18 @@
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap; 
+
     gap: 5vw;
     max-width: 100%;
 
 }
 
 .cardCarouselButton{
+
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
 
     font-size: clamp(1.7rem, 5vh, 3rem);
     padding: 1.5vh;
@@ -90,6 +96,10 @@
 
 .projectTitle{
 
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+
     font-size: clamp(1.6rem, 4.25vh, 2.75rem);
     color: rgb(3, 0, 47);
     max-width: 100%;
@@ -119,6 +129,10 @@
 
 .projectText{
 
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+
     font-size: clamp(1rem, 2.5vh, 1.5rem);
     color: rgb(3, 0, 47);
     max-width: 100%;
@@ -139,6 +153,10 @@
 
 
 .projectButton{
+
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
 
     font-size: clamp(1rem, 2.5vh, 1.75rem);
     padding: 1.5vh;
