--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -35,13 +35,10 @@
     align-items: center;
     justify-content: center;
 
-    width: 10vw;
-    height: 10vw;
-    max-width: 100%;
+    width: 8vw;
+    height: 8vw;
     
     padding: 1.5vh;
-
-    font-size: clamp(1.4rem, 4vh, 2.2rem);
 
     background-color: rgb(155, 218, 218);
 
@@ -67,31 +64,40 @@
 
 .contactImage{
 
-    max-width: 60%;
+    width: 55%;
 
 }
 
 
-@media (max-width: 1000px) {
+@media (max-device-width: 1024px) and (orientation: portrait) and (hover: none) {
 
     .contactContainer{
 
         display: flex;
         flex-direction: column;
         align-items: center;
+
         gap: 3vh;
+        padding: 5vh 5vw;
 
     }
 
     .contactBox{
 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
         width: 20vw;
         height: 20vw;
 
-        font-size: clamp(1rem, 2vh, 2.4rem);
+        padding: 1.5vh;
 
-        border-left: 0.8vh solid rgb(42, 82, 82);
-        border-bottom: 0.8vh solid rgb(42, 82, 82);
+        background-color: rgb(155, 218, 218);
+
+        border-left: 0.6vh solid rgb(42, 82, 82);
+        border-bottom: 0.6vh solid rgb(42, 82, 82);
         border-top: 0.2vh solid rgb(42, 82, 82);
         border-right: 0.2vh solid rgb(42, 82, 82);
 
@@ -101,8 +107,8 @@
 
     .contactBox:hover{
 
-        border-left: 0.8vh solid rgb(19, 72, 72);
-        border-bottom: 0.8vh solid rgb(19, 72, 72);
+        border-left: 0.6vh solid rgb(19, 72, 72);
+        border-bottom: 0.6vh solid rgb(19, 72, 72);
         border-top: 0.2vh solid rgb(19, 72, 72);
         border-right: 0.2vh solid rgb(19, 72, 72);
 
