--- a/Michelles_Portfolio/src/components/Introduction.css
+++ b/Michelles_Portfolio/src/components/Introduction.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   align-items: center;
   gap: 2vh;
-  max-width: 100%;
 
 }
 
@@ -15,8 +14,7 @@
   white-space: normal;
 
   color: white;
-  font-size: clamp(1rem, 3vh, 2rem);
-  max-width: 100%;
+  font-size: 2.5vh;
 
 }
 
@@ -27,9 +25,8 @@
   white-space: normal;
 
   background-color: rgb(111, 255, 255);
-  font-size: 1.8rem;
-  padding: 2vh;
-  max-width: 100%;
+  font-size: 3vh;
+  padding: 2vh 2vw;
 
   border-left: 0.8vh solid rgb(0, 104, 104);
   border-bottom: 0.8vh solid rgb(0, 104, 104);
@@ -67,18 +64,18 @@
 
 
 /* Mobile adjustments */
-@media (max-width: 1000px) {
+@media (max-device-width: 1024px) and (orientation: portrait) and (hover: none) {
 
   .introText{
 
-    font-size: clamp(1rem, 1vh, 2rem);
+    font-size: 2.3vh;
 
   }
 
   .resumeButton{
 
-    font-size: clamp(1rem, 1vw, 1.8rem);
-    padding: 1.5vh;
+    font-size: 2.5vh;
+    padding: 1.5vw 1.5vh;
 
     border-left: 0.5vh solid rgb(0, 104, 104);
     border-bottom: 0.5vh solid rgb(0, 104, 104);
