--- a/Michelles_Portfolio/src/components/ProjectComponents/ArcadeMedia.css
+++ b/Michelles_Portfolio/src/components/ProjectComponents/ArcadeMedia.css
@@ -62,11 +62,12 @@
     align-items: center;
     justify-content: center;
 
-    padding: 3vw;
-    gap: 2vw;
-    border-radius: 2vw;
+    padding: 3vh 3vw;
+    gap: 1.5vw;
+    border-radius: 1vw;
 
     font-size: 1vh;
+    font-weight: bold;
 
     background-color: rgb(221, 176, 255);
 
@@ -152,7 +153,25 @@
 }
 
 
-@media (max-width: 1000px) {
+@media (max-device-width: 1024px) and (orientation: portrait) and (hover: none) {
+
+    .ArcadeMediaContainer{
+
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100dvh; 
+        text-align: center;
+        z-index: 1;     
+        background-color: rgba(115, 0, 255, 0.541);
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
 
     .ArcadeMediaContentBox{
 
@@ -191,24 +210,24 @@
 
     .ArcadeVideoContainer {
 
-
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
 
-        padding: 5vw;
+        padding: 5vw 5vh;
         gap: 4vw;
         border-radius: 2vw;
 
         font-size: 0.8vh;
+        font-weight: bold;
 
         background-color: rgb(221, 176, 255);
 
-        border-left: 0.5vh solid rgb(100, 79, 117);
-        border-bottom: 0.5vh solid rgb(100, 79, 117);
-        border-top: 0.1vh solid rgb(100, 79, 117);
-        border-right: 0.1vh solid rgb(100, 79, 117);
+        border-left: 0.6vh solid rgb(100, 79, 117);
+        border-bottom: 0.6vh solid rgb(100, 79, 117);
+        border-top: 0.2vh solid rgb(100, 79, 117);
+        border-right: 0.2vh solid rgb(100, 79, 117);
 
     }
 
