--- a/Michelles_Portfolio/src/components/Introduction.css
+++ b/Michelles_Portfolio/src/components/Introduction.css
@@ -88,7 +88,7 @@
     border-top: 0.1vh solid rgb(0, 104, 104);
     border-right: 0.1vh solid rgb(0, 104, 104);
 
-    animation: glowing-shadow-subtitle 3s infinite;
+    animation: glowing-shadow-subtitle-mobile 3s infinite;
 
   }
 
