--- a/Michelles_Portfolio/src/components/SkillsExpandedCard.css
+++ b/Michelles_Portfolio/src/components/SkillsExpandedCard.css
@@ -16,15 +16,16 @@
 
 .skillExpandedCard{
 
+    max-height: 50%;
+    max-width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    width: 50vw;
     padding: 5rem;
     gap: 2rem;
 
-    background-color: rgb(147, 194, 251);
+    background-color: rgb(230, 147, 255);
     
     border-radius: 1vh;
     border-left: 0.8vh solid rgb(40, 55, 74);
@@ -32,6 +33,37 @@
     border-top: 0.3vh solid rgb(40, 55, 74);
     border-right: 0.3vh solid rgb(40, 55, 74);
 
-    box-shadow: 0 0 2vh 1vh rgb(63, 173, 233);
+    box-shadow: 0 0 2vh 1vh rgb(254, 179, 255);
+
+}
+
+.skillExpandedCardDescription {
+
+    width: 100%;
+    overflow-y: auto;
+
+    color: black;
+    font-weight: bold;
+
+}
+
+.skillExpandedCardButton {
+
+    color: black;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+
+    background-color: rgb(137, 210, 255);
+    border-left: 0.4vh solid rgb(40, 55, 74);
+    border-bottom: 0.4vh solid rgb(40, 55, 74);
+    border-top: 0.2vh solid rgb(40, 55, 74);
+    border-right: 0.2vh solid rgb(40, 55, 74);
+
+}
+
+.skillExpandedCardButton:hover {
+
+    color: white;
+    background-color: rgb(0, 52, 184);
 
 }
